# MatterThreads

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  Main.cpp
cmake/: CompilerWarnings.cmake
docs/: ARCHITECTURE.md  CLI.md  DELIVERY_VAN_ARCH_DIAGRAM.md  DELIVERY_VAN_ENDPOINT.md  EXEC_SUMMARY.md  FLEET_GATEWAY.md  IPV6_AND_DISCOVERY.md  MOBILE_SDK_GUIDE.md  POWER_LIFECYCLE.md  ROADMAP.md
ios/MatterAI/: Info.plist  MatterAI-Bridging-Header.h  MatterAI.entitlements
ios/MatterAI.xcodeproj/: project.pbxproj
ios/MatterAI.xcodeproj/project.xcworkspace/xcuserdata/tomharper.xcuserdatad/: UserInterfaceState.xcuserstate
ios/MatterAI.xcodeproj/xcuserdata/tomharper.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/MatterAI/App/: ChatView.swift  CommissioningView.swift  ContentView.swift  DeviceDetailView.swift  EventLogView.swift  HomeManager.swift  HomeView.swift  MatterAIApp.swift  SDKStatusView.swift  SettingsView.swift  SimulationService.swift  SimulationView.swift  ThreadDiagnosticsView.swift
ios/MatterAI/Backends/: GoogleHomeBackend.swift  HomeKitBackend.swift  LocalBackend.swift  MatterBackend.swift  ThreadBackend.swift
ios/MatterAI/Bridge/: MatterBridge.h  MatterBridge.mm
ios/MatterAI/Core/: BackendTypes.h  DeviceModel.cpp  DeviceModel.h  SceneEngine.cpp  SceneEngine.h  SimulationModel.cpp  SimulationModel.h  TLVCodec.cpp  TLVCodec.h
ios/MatterAI/Core/Questions/: Leetcode.cpp  Leetcode.hpp  Leetcode.swift
ios/MatterAI/SDK/: BackendRouter.swift  DeviceBackend.swift  DeviceEventStream.swift  MatterHomeSDK.swift  SDKKeychain.swift  UnifiedDevice.swift
scripts/: healing-demo.sh
src/: CMakeLists.txt
src/broker/: BrokerMain.cpp  CMakeLists.txt
src/core/: ByteBuffer.h  CMakeLists.txt  Clock.cpp  Clock.h  Log.cpp  Log.h  Random.cpp  Random.h  Result.h  Types.h
src/fault/: CMakeLists.txt  Chaos.cpp  Chaos.h  FaultPlan.cpp  FaultPlan.h  Scheduler.cpp  Scheduler.h
src/gateway/: CMakeLists.txt  CommandRelay.cpp  CommandRelay.h  FabricManager.cpp  FabricManager.h  FleetSubscriptionManager.cpp  FleetSubscriptionManager.h  GatewayMain.cpp  GatewayServer.cpp  GatewayServer.h  GatewayTypes.h  OfflineBuffer.cpp  OfflineBuffer.h  SessionPool.cpp  SessionPool.h  VanRegistry.cpp  VanRegistry.h
src/hw/: CMakeLists.txt  ChipToolDriver.cpp  ChipToolDriver.h  ChipToolOutputParser.cpp  ChipToolOutputParser.h  HardwareNode.cpp  HardwareNode.h  OTBRClient.cpp  OTBRClient.h  ProcessManager.cpp  ProcessManager.h
src/hw/darwin/: CMakeLists.txt  DarwinBridge.h  DarwinBridge.mm
src/matter/: CASE.cpp  CASE.h  CMakeLists.txt  DataModel.cpp  DataModel.h  Exchange.cpp  Exchange.h  Fabric.cpp  Fabric.h  InteractionModel.cpp  InteractionModel.h  PASE.cpp  PASE.h  Session.cpp  Session.h  SubscriptionManager.cpp  SubscriptionManager.h  TLV.cpp  TLV.h
src/metrics/: CMakeLists.txt  Collector.cpp  Collector.h  Counter.cpp  Counter.h  DashboardServer.cpp  DashboardServer.h  Histogram.cpp  Histogram.h  Reporter.cpp  Reporter.h  Timeline.cpp  Timeline.h  dashboard.html
src/net/: Broker.cpp  Broker.h  CMakeLists.txt  Channel.cpp  Channel.h  Discovery.cpp  Discovery.h  FaultInjector.cpp  FaultInjector.h  Frame.cpp  Frame.h  SelfHealing.cpp  SelfHealing.h  Socket.cpp  Socket.h
src/node/: CMakeLists.txt  NodeMain.cpp
src/thread/: AddressManager.cpp  AddressManager.h  BorderRouter.cpp  BorderRouter.h  CMakeLists.txt  ChildTable.cpp  ChildTable.h  Leader.cpp  Leader.h  MLE.cpp  MLE.h  MeshTopology.cpp  MeshTopology.h  PowerManager.cpp  PowerManager.h  Routing.cpp  Routing.h  SRP.cpp  SRP.h  ThreadNode.cpp  ThreadNode.h
tests/: CMakeLists.txt
tests/scenarios/: CMakeLists.txt  ScenarioRunner.cpp  ScenarioRunner.h  TestCertHarness.cpp  TestCommissioning.cpp  TestGatewayScenarios.cpp  TestMeshHealing.cpp  TestMessageOrdering.cpp  TestPowerLifecycle.cpp  TestRouteFailure.cpp  TestSubscriptionRecovery.cpp  TestVanScenarios.cpp
tests/unit/: CMakeLists.txt  TestBorderRouter.cpp  TestChannel.cpp  TestChipToolDriver.cpp  TestChipToolOutputParser.cpp  TestCommandRelay.cpp  TestDashboardServer.cpp  TestDiscovery.cpp  TestFabricManager.cpp  TestFaultInjector.cpp  TestFleetSubscription.cpp  TestGatewayServer.cpp  TestHardwareNode.cpp  TestInteractionModel.cpp  TestOTBRClient.cpp  TestOfflineBuffer.cpp  TestPowerManager.cpp  TestProcessManager.cpp  TestRouting.cpp  TestSRP.cpp  TestSelfHealing.cpp  TestSessionPool.cpp  TestTLV.cpp  TestVanRegistry.cpp
tools/sim-relay/: Dockerfile  package.json  server.js
tools/sim-tunnel/: package.json  tunnel.js
